fix(editor): Last selected color of picker is not updated
The picker should show the last selected color. Currently it is not visible and when it is shown, no value is selected.

telerik/kendo#6519

--- a/styles/web/common/editor.less
+++ b/styles/web/common/editor.less
@@ -202,6 +202,10 @@ table.k-editor
     transform: scaleX(-1);
 }
 
+.k-editor-toolbar .k-colorpicker .k-tool-icon {
+    overflow: visible;
+}
+
 .k-button-group .k-tool
 {
     border-style: solid;
@@ -272,11 +276,6 @@ table.k-editor
 .k-editor .k-tool
 {
     outline: 0;
-}
-
-.k-editor .k-colorpicker .k-tool-icon .k-selected-color,
-.k-editor-widget .k-colorpicker .k-tool-icon .k-selected-color {
-    display: none;
 }
 
 .k-editor iframe.k-content
